--- a/final/style.css
+++ b/final/style.css
@@ -26,7 +26,7 @@
     background: var(--main-color);
 }
 
-section{
+section {
     padding: 4rem 0 3rem;
 }
 
@@ -95,9 +95,11 @@ header {
     cursor: pointer;
 
 }
-#bell-icon{
+
+#bell-icon {
     position: relative;
 }
+
 #bell-icon span {
     content: "";
     width: 5px;
@@ -124,20 +126,24 @@ header {
     z-index: 200;
     transition: 0.3s;
 }
-.menu-icon div{
+
+.menu-icon div {
     display: block;
     background: var(--text-color);
     height: 2px;
     width: 25px;
     transition: 0.3s;
 }
-.move .line1{
+
+.move .line1 {
     transform: rotate(-45deg) translate(-5px, 5px);
 }
-.move .line2{
+
+.move .line2 {
     opacity: 0;
 }
-.move .line3{
+
+.move .line3 {
     transform: rotate(45deg) translate(-5px, -5px);
 }
 
@@ -156,31 +162,36 @@ header {
     transition: 0.5s;
     clip-path: circle(0% at 100% 0%);
 }
-.menu.active{
+
+.menu.active {
     clip-path: circle(144% at 100% 0%);
 }
-.menu img{
+
+.menu img {
     width: 700px;
 }
-.navbar{
+
+.navbar {
     display: grid;
     row-gap: 1rem;
     text-align: right;
     padding-right: 2rem;
 }
-.navbar a{
+
+.navbar a {
     font-size: 1.6rem;
     color: var(--text-color);
     font-weight: 500;
     transition: 0.2s;
 }
-.navbar a:hover{
+
+.navbar a:hover {
     border-bottom: 4px solid var(--main-color);
     font-size: 1.8rem;
 }
 
 /* Notification */
-.notification{
+.notification {
     position: absolute;
     top: 110%;
     right: 5rem;
@@ -194,11 +205,13 @@ header {
     row-gap: 1rem;
     clip-path: circle(0% at 100% 0%);
 }
-.notification.active{
+
+.notification.active {
     clip-path: circle(144% at 100% 0%);
     transition: 0.3s;
 }
-.notification-box{
+
+.notification-box {
     display: flex;
     align-items: baseline;
     column-gap: 1rem;
@@ -206,18 +219,21 @@ header {
     background: var(--dark-color);
     padding: 10px;
 }
-.notification-box .bx{
+
+.notification-box .bx {
     color: #faf102;
 }
-.box-color{
+
+.box-color {
     background: hsl(0, 0%, 100%, 0.4);
 }
-.box-color .bx{
+
+.box-color .bx {
     color: var(--main-color);
 }
 
 /* Home */
-.home{
+.home {
     position: relative;
     min-height: 540px;
     display: flex;
@@ -225,7 +241,8 @@ header {
     justify-content: flex-end;
     margin-top: 5rem;
 }
-.home img{
+
+.home img {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -233,17 +250,20 @@ header {
     border-radius: 1.4rem;
     z-index: -1;
 }
-.home-text{
+
+.home-text {
     padding-right: 4rem;
     text-align: right;
 }
-.home-text h1{
+
+.home-text h1 {
     font-size: 2.4rem;
     text-transform: uppercase;
     color: var(--dark-color);
     margin-bottom: 1rem;
 }
-.btn{
+
+.btn {
     background: var(--main-color);
     padding: 15px 20px;
     color: var(--text-color);
@@ -253,26 +273,102 @@ header {
     font-weight: 500;
     clip-path: polygon(0 0, 100% 0%, 100% 100%, 10% 100%, 0% 68%);
 }
-.btn:hover{
+
+.btn:hover {
     background: var(--ligth-color);
     transition: 0.3s all linear;
 }
 
 /* Heading */
-.heading{
+.heading {
     display: flex;
     align-items: center;
     column-gap: 1rem;
     margin-bottom: 2rem;
 }
-.heading .bx{
+
+.heading .bx {
     font-size: 21px;
     color: var(--text-color);
     background: var(--main-color);
     padding: 10px;
     border-radius: 5rem;
 }
-.heading h2{
+
+.heading h2 {
     font-size: 1.2rem;
     font-weight: 500;
+}
+
+.box {
+    position: relative;
+    width: 100%;
+    height: 350px;
+    border-radius: 0.5rem;
+}
+
+.box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 0.5rem;
+}
+
+.box .box-text {
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    padding: 10px;
+    background: hsl(227, 14%, 20%, 0.8);
+    backdrop-filter: blur(4px);
+    border-radius: 0.5rem;
+}
+
+.box .box-text h2 {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.box .box-text h3 {
+    font-size: 0.9rem;
+    font-weight: 400;
+    margin-bottom: 0.8rem;
+}
+
+.rating-download {
+    display: flex;
+    justify-content: space-between;
+}
+
+.rating {
+    display: flex;
+    align-items: center;
+    column-gap: 4px;
+    background: hsl(0, 0%, 100%, 0.4);
+    padding: 4px 10px;
+    border-radius: 0.5rem;
+}
+
+.rating .bx {
+    color: #faf102;
+    font-size: 0.9rem;
+}
+.box-btn .bx{
+    padding: 8px;
+    background: var(--text-color);
+    border-radius: 5rem;
+    color: var(--main-color);
+    font-size: 20px;
+    font-weight: 400;
+}
+.box-btn .bx:hover{
+    background: var(--dark-color);
+}
+
+/* New */
+.new-content{
+    display: grid;
+    grid-template-columns: repeat(autofit, minmax(240px,auto));
+    gap: 1.2rem;
 }
